# ieee-election

./: .babelrc  .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .posthtmlrc  Caddyfile  Caddyfile.txt  Dockerfile  README.md  add-admin.mjs  build.js  clear-dist.js  docker-compose.yml  package-lock.json  package.json  posthtml.config.js  pyproject.toml  ugh.json
app/: app.js  build.js  db.js  endpoint.js  idk.js  index.html  server.js  tagsfield.js
app/pages/: admin-panel.html  home.html  login.html
frontend/: .eslintrc.json  build.js  package-lock.json  package.json
frontend/src/: index.html  main.js  style.css
server/: db.js  endpoint.js  server.js
server/mail-templates/: key-mail.html
src/: app.js  index.html  script.js  style.sass  tagsfield.js
src/common/: footer.html  glue.html  head.html
src/pages/: admin-login.html  admin-panel.html  admin.html  home.html  login.html
