[tool.poetry]
name = "ieee-election"
version = "1.0.0"
description = "IEEE Online Election App"
authors = ["Ozan Eğitmen <ozan@egitmen.net>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
ujson = "^3.0.0"
tinydb = "^4.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
